--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,6 +43,7 @@
       <footer>
         {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
+        <p>Subscribe my blog: <a href=http://feed43.com/lonaparte-logos-blog.xml>RSS source</a></p>
         {% endif %}
       </footer>
     </div>
