--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,6 +45,7 @@
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         <p>Subscribe my blog: <a href=http://feed43.com/lonaparte-logos-blog.xml>RSS source</a></p>
         {% endif %}
+        <!-- Edit the rss: http://feed43.com/feed.html?name=lonaparte-logos-blog -->
       </footer>
     </div>
     <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
