--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,14 +6,13 @@ layout: default
     <script src="./dist/Valine.min.js"></script>
     <script>
         new Valine({
-            // AV 对象来自上面引入av-min.js(老司机们不要开车➳♡゛扎心了老铁)
             av: AV, 
             el: '.comment',
             emoticon_url: 'https://cloud.panjunwen.com/alu',
             emoticon_list: ["吐.png","期待.png","高兴.png","吐血倒地.png","哭泣.png","欢呼.png"],
             app_id: 'xxG5I8sArJXlJOsMnUGrUK9q-gzGzoHsz', // 这里填写上面得到的APP ID
             app_key: 'cSvqqASxQqdSE3fgDGtQX832', // 这里填写上面得到的APP KEY
-            placeholder: 'ヾﾉ≧∀≦)o来啊，快活啊!', // 留言框占位提示文字
+            placeholder: 'ヾﾉ≧∀≦)o来啊，快来评论!', // 留言框占位提示文字
         });
     </script>
 
