--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <script src="//cdn1.lncld.net/static/js/3.0.4/av-min.js"></script>
     <!--Valine 的核心代码库-->
-    <script src="./dist/Valine.min.js"></script>
+    <script src="/assets/js/scale.fix.js"></script>
     <script>
         new Valine({
             av: AV, 
