--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,8 +1,7 @@
 ---
 layout: default
 ---
-<script src="//cdn1.lncld.net/static/js/3.0.4/av-min.js"></script>
-    <!--Valine 的核心代码库-->
+<!-- <script src="//cdn1.lncld.net/static/js/3.0.4/av-min.js"></script>
     <script src="/assets/js/scale.fix.js"></script>
     <script>
         new Valine({
@@ -14,9 +13,9 @@ layout: default
             app_key: 'cSvqqASxQqdSE3fgDGtQX832', // 这里填写上面得到的APP KEY
             placeholder: 'ヾﾉ≧∀≦)o来啊，快来评论!', // 留言框占位提示文字
         });
-    </script>
+</script> -->
 
-<script src="https://cdnjs.loli.net/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!-- <script src="https://cdnjs.loli.net/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
 
 <small>{{ page.date | date: "%-d %B %Y" }}</small>
 <h1>{{ page.title }}</h1>
@@ -32,4 +31,4 @@ layout: default
   <small>tags: <em>{{ page.tags | join: "</em> - <em>" }}</em></small>
 {% endif %}
 
-<div class="comment"></div>
+<!-- <div class="comment"></div> -->
